@@ -1,5 +1,6 @@
 2013-06-06 Alexander Opitz <opi@gmx.at>
 * #71: Move autoloader out of Bootstrap.php
+* #72: Add SimpleRoute Filter and use Config Classes
 
 2013-05-12 Alexander Opitz <opi@gmx.at>
 * #66: Use namespaces
